<?xml version="1.0"?>
<package format="3">
  <name>follow_me_robot</name>
  <version>0.0.1</version>
  <description>ROS 2 package for follow-me robot using C++</description>

  <maintainer email="gregor5@onet.pl">grego</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <exec_depend>opencv</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

